syntax = "proto3"; //컴파일러가 사용할 문법
option java_multiple_files=true; //세팅 오버라이드=개개의 파일로 생성됨
package org.example;//생성된 자바 클래스들에서 사용하길 원하는 패키지 명시

//build 폴더 삭제?
//./gradlew build
//gradle bulid

//기본 요청
message Request{
  string token=1;
  string type=2;
  string payload=3;
}
//기본 응답
message ResponseList{
  string type=1;
  repeated string Response=2;
}
message Response{
  string message=1;
}

//로그인 요청 양식
message StudentCertRequest{
  string id=1;
  string pw=2;
}
//학생 응답
message Student{
  string studentId=1;
  string name=2;
  string department=3;
  repeated string courseList=4;
  string id=5;
  string pw=6;
  string token=7;
}
message StudentsListResponse{
  repeated Student student=1;
}
//과목 응답
message Course{
  string id=1;
  string professor=2;
  string className=3;
  repeated string preClass=4;
  string token=5;
}
message CourseListResponse{
  repeated Course course=1;
}
//수강신청 응답
message Registration{
  string studentId=1;
  repeated string courseId=2;
}
message RegistrationListResponse{
  repeated Registration registration=1;
}

//client
service DataService{
  rpc login(StudentCertRequest) returns(Response);
}
service StudentService{
  rpc getStudentList(Request) returns (ResponseList);
  rpc addStudent(Student) returns(Response);
  rpc deleteStudent(Request) returns(Response);
}
service CourseService{
  rpc getCourseList(Request) returns (ResponseList);
  rpc addCourse(Course) returns(Response);
  rpc deleteCourse(Request) returns(Response);
}
service RegistrationService{
  rpc registration(Request) returns(Response);
}

//data
service ServerStudentService{
  rpc getStudentList(Request) returns (StudentsListResponse);
  rpc getStudent(Request) returns (Student);
  rpc addStudent(Request) returns (Response);
  rpc deleteStudent(Request) returns (Response);
}
service ServerCourseService{
  rpc getCourseList(Request) returns (CourseListResponse);
  rpc getCourse(Request) returns (Course);
  rpc addCourse(Request) returns (Response);
  rpc deleteCourse(Request) returns (Response);
}
service ServerRegistrationService{
  rpc getRegistrationList(Request) returns (RegistrationListResponse);
  rpc getRegistration(Request) returns (Registration);
  rpc addRegistration(Request) returns (Response);
}